# dustviz

./: CHANGELOG.md  Cargo.toml  README.md  State.toml  structure.md
crates/dustviz/: Cargo.toml  DESIGN.md
crates/dustviz/src/: app.rs  cli.rs  lib.rs  main.rs
crates/dustviz/src/graph/: build.rs  focus.rs  link_ir_refs.rs  mod.rs  overlay_constraints.rs  overlay_trace.rs
crates/dustviz/src/input/: discover.rs  load.rs  load_constraints.rs  load_trace.rs  mod.rs
crates/dustviz/src/model/: constraints.rs  ir.rs  mod.rs  trace.rs
crates/dustviz/src/render/: dot.rs  json.rs  mod.rs  svg.rs
crates/dustviz/src/util/: diagnostics.rs  fs.rs  mod.rs
crates/dustviz/tests/: render_constraints_dot.rs  render_constraints_json.rs  render_dot.rs  render_dot_annotated.rs  render_trace_dot.rs  render_trace_focus_dot.rs  render_trace_json.rs  smoke_cli.rs
crates/dustviz/tests/fixtures/constraints/minimal/: combined.dot  combined.graph.json  combined.linked.dot  combined.linked.graph.json  constraints.json
crates/dustviz/tests/fixtures/minimal/: README.md  program.annotated.dot  program.dir.json  program.dot  program.graph.json
crates/dustviz/tests/fixtures/trace/minimal/: combined.dot  combined.focus.dot  combined.graph.json  trace.jsonl
docs/: README.md  architecture.md  cli_reference.md  design.md  diagnostics.md  getting_started.md  graph_and_overlays.md  input_formats.md  library_api.md  rendering.md  testing.md
src/: dustviz.ds  main.ds  viz_app.ds  viz_cli.ds  viz_contracts.ds  viz_graph.ds  viz_host.ds  viz_input.ds  viz_render.ds  viz_tests.ds
(+10 files in other folders)
